--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <table>
     <tr>
         <td> <a href="https://github.com/KalpanaBhati-13">  <img width="200"
-            src="myphoto.jpg" alt="this is my photo"></a>
+            src="https://ucarecdn.com/
+9b002f55-bc8b-4db6-b7ad-e5516ccf1bbe/" alt="this is my photo"></a>
          
         </td>
         <td>
